--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -148,6 +148,10 @@ section {
   padding: 5px 15px;
   border-radius: 20px;
   letter-spacing: 0.2em;
+  p{
+    color:$green;
+    letter-spacing:normal;
+  }
 }
 
 .preview{
