--- a/src/styles/_firstScreen.scss
+++ b/src/styles/_firstScreen.scss
@@ -6,10 +6,16 @@
     position: absolute;
     text-align: center;
     animation: opacity 2s ease-in-out;
+    width:100%;
+    height:100%;
+    background: rgba(114, 172, 226, 0.600);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     h3 {
       white-space: pre;
-      color: #72abe2;
-      opacity: 0.6;
+      color: white;
       margin-top: 20px;
       @media (max-width: 600px) {
         font-size: 25px;
