--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -731,12 +731,27 @@ nav .hamburger-open :nth-child(3n) {
   text-align: center;
   -webkit-animation: opacity 2s ease-in-out;
           animation: opacity 2s ease-in-out;
+  width: 100%;
+  height: 100%;
+  background: rgba(114, 172, 226, 0.6);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .first-screen .first-screen-opacity h3 {
   white-space: pre;
-  color: #72abe2;
-  opacity: 0.6;
+  color: white;
   margin-top: 20px;
 }
 
