--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -13,25 +13,31 @@
         justify-content: space-around;
         flex: 1;
         margin-top: 30px;
+
+        @media(max-width:1440px){
+            margin-top:15px;
+        }
     }
     &-group{
 
         &-title{
-            margin-bottom: 25px;
+            margin-bottom: 20px;
             span{
                 font-size: 14px;
-
+                @media(max-width:1440px){
+                    font-size: 12px;
+                }
             }
         }
 
         &-item{
             display: flex;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             span{
                 font-size: 12px;
                 @media(max-width:1440px){
-                    font-size: 10px;
+                    font-size: 9px;
                 }
                 @media(max-width:500px){
                     font-size: 7px;
