--- a/src/styles/_fourthScreen.scss
+++ b/src/styles/_fourthScreen.scss
@@ -31,7 +31,11 @@
         @media(max-width:1440px){
             padding: 25px 0px;
         }
-        @media(max-width:500px){
+        @media(max-width:1024px){
+            margin-bottom:60px;
+        }
+        @media(max-width:600px){
+            margin-bottom:40px;
             justify-content: center;
             text-align: center;
         }
@@ -48,7 +52,7 @@
             background-color: #72ABE2;
             cursor: pointer;
 
-            @media(max-width:500px){
+            @media(max-width:600px){
                 display: none;
             }
 
@@ -73,9 +77,9 @@
             }
 
             @media(max-width:1024px){
-                font-size: 30px;
+                font-size: 45px;
             }
-            @media(max-width:500px){
+            @media(max-width:600px){
                 font-size: 30px;
             }
         }
