--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -148,6 +148,14 @@ section {
   padding: 5px 15px;
   border-radius: 20px;
   letter-spacing: 0.2em;
+
+  @media(max-width:1024px){
+    left:40%;
+  }
+
+  @media(max-width:600px){
+    left:28%;
+  }
   p{
     color:$green;
     letter-spacing:normal;
@@ -181,3 +189,24 @@ section {
     padding-top: 0px;
   }
 }
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, .1);
+  border-left-color: transparent;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  border-radius: 50%;
+
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
