--- a/src/styles/_thirdScreen.scss
+++ b/src/styles/_thirdScreen.scss
@@ -7,13 +7,13 @@
   .preview{
     background-color: $green;
   }
-  @media (max-width: 900px) {
+  @media (max-width: 968px) {
     flex-direction: column-reverse;
     justify-content: space-between;
   }
 
   .image-wrapper {
-    @media(max-width:900px){
+    @media(max-width:968px){
       width: 100%;
     }
     img {
@@ -31,13 +31,13 @@
         width: 400px;
       }
 
-      @media (max-width: 500px) {
+      @media (max-width: 600px) {
         display: none;
       }
     }
     .image-responsive {
       display: none;
-      @media (max-width: 500px) {
+      @media (max-width: 600px) {
         display: block;
       }
     }
@@ -46,7 +46,7 @@
   .info {
     margin-left: 100px;
     &-text {
-      @media (max-width: 900px) {
+      @media (max-width: 968px) {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -56,7 +56,7 @@
       margin-left: 50px;
     }
 
-    @media(max-width:900px){
+    @media(max-width:968px){
       flex: 1;
       display: flex;
       flex-direction: column;
@@ -65,15 +65,19 @@
 
     }
 
-    @media (max-width: 500px) {
+    @media (max-width: 600px) {
       flex: 1;
       text-align: center;
       margin-left: 0px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      margin-top:20px;
+      padding-right:0px;
+      //justify-content: flex-end;
     }
     span {
+      display:block;
+      margin-bottom:10px;
       color: $green;
     }
     h3 {
@@ -83,7 +87,11 @@
         font-size: 90px;
 
       }
-      @media (max-width: 500px) {
+
+      @media(max-width:1024px){
+        font-size:70px;
+      }
+      @media (max-width: 600px) {
         font-size: 40px;
       }
     }
@@ -91,36 +99,35 @@
       display: flex;
       align-items: center;
       margin-top: 50px;
-      @media (max-width: 900px) {
+      @media (max-width: 968px) {
         justify-content: flex-end;
       }
-      @media (max-width: 500px) {
+      @media (max-width: 600px) {
         flex-direction: column-reverse;
-        margin-top: 20px;
+        margin-top: 50px;
       }
       p {
         color: $green;
         width: 50%;
-
-        @media (max-width: 1024px) {
-          font-size: 14px;
+        @media (max-width: 1440px) {
+          font-size: 12px;
         }
-        @media (max-width: 500px) {
+        @media (max-width: 600px) {
           width: auto;
           font-size: 10px;
         }
       }
       button {
         white-space: pre;
-        height: 58px;
-        padding: 0px 40px;
+        height: 50px;
+        padding: 0px 15px;
         margin-right: 20px;
         transform: rotate(-5deg);
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 16px;
         background: #e44a3d;
 
-        @media (max-width: 500px) {
+        @media (max-width: 600px) {
           font-size: 14px;
           height: 40px;
           margin: 15px 0px 10px 0px;
